tests/snapshot/error/source_locations/destructure/array/rest_iterator_next.js
var iterable = {
  [Symbol.iterator]() {
    return {
      next() {
        throw new Error();
      }
    }
  }
};

var [...rest] = iterable;