tests/snapshot/error/source_locations/destructure/array/rest_iterator_next.exp
Error: 
  ┌ source_locations/destructure/array/rest_iterator_next.js:5:15
  |
5 |         throw new Error();
  |               ^
Stack trace:
  at next (source_locations/destructure/array/rest_iterator_next.js:5:15)
  at <global> (source_locations/destructure/array/rest_iterator_next.js:11:6)